--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "express-server": "^0.7.0",
     "handlebars": "^4.0.12",
     "mysql": "^2.16.0",
     "require": "^2.4.20"
